--- a/css/custom.css
+++ b/css/custom.css
@@ -353,9 +353,9 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-    border-color: limegreen;
+    border-color: RoyalBlue;
     color: #fff;
-    background-color: limegreen;
+    background-color: RoyalBlue;
 }
 
 .btn-primary:active,
